--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -45,6 +45,14 @@ spring:
     init:
       schema-locations: classpath:schema.sql
 
+  security:
+    oauth2:
+      client:
+        registration:
+          github:
+            clientId: 417c54c1741883c2929a
+            clientSecret:  52abdacbf86e60495d346f0c9452f69c9bde9244
+
 ---
 
 
@@ -61,4 +69,4 @@ spring:
 
   sql:
     init:
-      schema-locations: classpath:schema.sql
+      schema-locations: classpath:test_schema.sql
